# HexBot

./: .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  bumpversion.yml  lint.yml  scan.yml  test.yml
src/: cards.py  deck.py  game.py  player.py  resources.py
src/board/: board.py  edge.py  harbor.py  mapping.py  node.py  terrain.py  tile.py
src/catan/board/: board.py  edge.py  harbor.py  mapping.py  node.py  terrain.py  tile.py
src/catan/buildings/: buildings.py
src/catan/deck/: cards.py  deck.py
src/catan/game/: game.py
src/catan/game/robber/: robber_manager.py
src/catan/game/setup/: auto_setup.py
src/catan/player/: player.py
src/catan/player/managers/: building_manager.py  development_card_manager.py  resource_manager.py  road_manager.py  trade_manager.py
src/catan/resources/: resources.py
src/config/: config.py  config.yaml
src/core/: board.py  game.py  hex.py  player.py
src/core/actions/: action.py
src/deck/: cards.py  deck.py
src/game/: game.py  types.py
src/interface/: input_handler.py
src/player/: player.py
src/utils/: handlers.py
tests/: test_a.py
tests/catan/board/: test_board.py  test_edge.py  test_harbor.py  test_node.py  test_tile.py
tests/catan/deck/: test_cards.py  test_deck.py
tests/catan/game/: test_game.py
tests/catan/player/: test_player.py
tests/catan/resources/: test_resources.py
