[tool.poetry]
name = "HexBot"
version = "0.1.1"
description = "HexBot"
authors = ["AidanInceer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
black = "^23.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
fastapi = "^0.105.0"
requests = "^2.31.0"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"
coverage = "^7.3.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
torch = "^2.1.2"
bump-my-version = "^0.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.bumpversion]
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"


[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "{current_version}"
replace = "{new_version}"
