[tool]
[tool.poetry]
name = "HexBot"
version = "0.2.0"
description = "HexBot"
authors = ["AidanInceer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
black = "^23.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
fastapi = "^0.105.0"
requests = "^2.31.0"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"
coverage = "^7.3.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
torch = "^2.1.2"
bump-my-version = "^0.15.3"
poetry-plugin-export = "^1.6.0"
gitchangelog = "^3.0.4"
commitizen = "^3.13.0"


[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"


[tool.commitizen]
name = "cz_conventional_commits"
changelog_incremental = true
tag_format = "$major.$minor.$patch"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
