[tool]
[tool.poetry]
name = "HexBot"
version = "1.0.0"
description = "HexBot"
authors = ["AidanInceer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
black = "^23.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
fastapi = "^0.105.0"
requests = "^2.31.0"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"
coverage = "^7.3.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
torch = "^2.1.2"
bump-my-version = "^0.15.3"
poetry-plugin-export = "^1.6.0"
gitchangelog = "^3.0.4"
commitizen = "^3.13.0"


[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"


[tool.commitizen]
version = "1.0.0"
version_files = [
    "README.md",
    "pyproject.toml:version"
]
name = "cz_conventional_commits"
tag_format = "$major.$minor.$patch"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_any_expr = true
strict_optional = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
# include = ["src"]
# exclude = ["tests"]
strict_equality = true
cache_dir = ".mypy_cache"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
